--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "react": "19.0.0-rc-66855b96-20241106",
     "react-dom": "19.0.0-rc-66855b96-20241106"
   },
+  "proxy": "http://localhost:8080",
   "devDependencies": {
     "@types/node": "^20",
     "@types/react": "^18",
